[package]
name = "bedrock-leveldb-sys"
version = "1.0.0"
links = "leveldb"
authors = [ "NguyenDuck" ]
description = "Rust FFI bindings for Mojang's fork of LevelDB (Bedrock Edition)"
edition = "2024"
license = "AGPL-3.0-only"
keywords = [ "minecraft", "bedrock", "leveldb", "blocktopograph" ]


[dependencies]
ffi-opaque = "2"
libc = "0.2"


[build-dependencies]
cc = "1.2"
glob = "0.3"
